<resources>
    <string name="app_name">Language Flip</string>
    <string name="action_settings">Settings</string>
    <string name="no_phrase_book">They are currently no phrase books - why not make one?</string>
    <string name="empty_not_saved">Not saved</string>
    <string name="button_save">Save</string>
    <string name="remove">Remove</string>
    <string name="rename">Rename</string>
    <string name="areyousure">Are you sure?</string>
    <string name="sure">I\'m sure</string>
    <string name="removephrasebooktext">If you remove this Phrasebook, then all phrases within it will be removed.</string>
    <string name="newpb">New PhraseBook</string>
    <string name="name">Name</string>
    <string name="rename_phrasebook">Rename PhraseBook</string>
    <string name="rename_msg">What would you like to call your PhraseBook?</string>
    <string name="slide_welcome_msg_1">Welcome to Language Flip</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="begin">Begin</string>

    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="title_settings_lang2">Language to Learn</string>
    <string name="title_settings_lang1">Main Language</string>
    <string name="your_language">Your Language:</string>
    <string name="your_current_language">Your Current Language:</string>
    <string name="what_do_you_want_to_learn">What do you want to learn?</string>
    <string name="lets_enter_some_settings_to_get_you_started">Lets enter some settings to get you started</string>
    <string name="what_is_the_correct_meaning_of_the_following_word">What is the correct translation of the following word</string>
    <string name="answer">Answer</string>
    <string name="score">Score:</string>
    <string name="correct_message">That\'s right!</string>
    <string name="actually_means">%s actually means %s</string>
    <string name="score_int">Score: %s</string>
    <string name="you_got_score">You got a score of %s</string>
    <string name="create_a_phrase_here_by_entering_the_same_phrase_in_both_languages">Create a phrase here, by entering the same phrase in both languages</string>
    <string name="lang1">lang1</string>
    <string name="lang2">lang2</string>
    <string name="rem_phrase">Remove Phrase</string>
    <string name="ren_phrase">Edit Phrase</string>
    <string name="klingon">Klingon</string>


</resources>